# hoprnet

./: .actrc  .coderabbit.yaml  .deps-cache  .dockerignore  .editorconfig  .env  .env.demo  .env.example  .envrc  .eslintrc  .eslintrc.js  .gcloudignore  .gitattributes  .gitbook.yaml  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.dockerfile  .gitpod.yml  .npmignore  .npmrc  .nvmrc  .prettierignore  .prettierrc  .prettierrc.json  .readthedocs.yml  .snyk  .solcover.js  .solhint.json  .yamlfmt  .yarnclean  .yarnrc  .yarnrc.yml  .zizmor.yml  AGENTS.md  Brewfile  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_PREDEPLOY_2026-07-17.md  (+118 more)
chain/actions/: Cargo.toml
chain/api/: Cargo.toml  build.rs
chain/chain-indexer/: Cargo.toml
chain/client/: Cargo.toml  build.rs
chain/connector/: Cargo.toml
chain/db/: Cargo.toml
chain/indexer/: Cargo.toml
chain/rpc/: Cargo.toml
chain/types/: Cargo.toml
common/api/: Cargo.toml
common/async-runtime/: BENCHMARK_RESULTS.md  Cargo.toml
common/cache/: Cargo.toml
common/executor/: Cargo.toml
common/internal-types/: Cargo.toml
common/network-types/: Cargo.toml
common/parallelize/: Cargo.toml
common/primitive-types/: Cargo.toml
common/statistics/: Cargo.toml
common/test-stubs/: Cargo.toml
crypto/keypair/: Cargo.toml
crypto/packet/: Cargo.toml  README.md
hopli/: .gitignore  Cargo.toml  Dockerfile  README.md  all.html  enum.Commands.html  fn.main.html  index.html  sidebar-items.js  static.GLOBAL.html  struct.Cli.html
hopli/constants/: constant.DEFAULT_ANNOUNCEMENT_PERMISSIONS.html  constant.DEFAULT_CAPABILITY_PERMISSIONS.html  constant.DEFAULT_NODE_PERMISSIONS.html  constant.DIV_BY_ZERO.html  constant.DOMAIN_SEPARATOR_TYPEHASH.html  constant.ERC_1820_DEPLOYER.html  constant.ERC_1820_REGISTRY_DEPLOY_CODE.html  constant.ERC_1820_SIGNED_DEPLOYMENT_TX.html  constant.ERC_1967_PROXY_CREATION_CODE.html  constant.ETH_VALUE_FOR_ERC1820_DEPLOYER.html  constant.ETH_VALUE_FOR_MULTICALL3_DEPLOYER.html  constant.INIT_KEY_BINDING_FEE.html  constant.MULTICALL3_DEPLOYER.html  constant.MULTICALL3_DEPLOY_CODE.html  constant.SAFE_COMPATIBILITYFALLBACKHANDLER_ADDRESS.html  constant.SAFE_COMPATIBILITY_FALLBACK_HANDLER_DEPLOY_CODE.html  constant.SAFE_DIAMOND_PROXY_SINGLETON_DEPLOY_CODE.html  constant.SAFE_MULTISEND_ADDRESS.html  constant.SAFE_MULTISEND_CALL_ONLY_DEPLOY_CODE.html  constant.SAFE_PROXY_FACTORY_DEPLOY_CODE.html  constant.SAFE_SAFEPROXYFACTORY_ADDRESS.html  constant.SAFE_SAFE_L2_ADDRESS.html  constant.SAFE_TX_TYPEHASH.html  constant.SENTINEL_OWNERS.html  index.html  sidebar-items.js  static.SAFE_SINGLETON_DEPLOY_CODE.html
hopli/create_safe_module/: index.html  sidebar-items.js  struct.CreateSafeModuleArgs.html
hopli/environment_config/: enum.EnvironmentType.html  fn.ensure_environment_and_network_are_set.html  fn.get_environment_type_from_name.html  fn.get_network_details_from_name.html  index.html  sidebar-items.js  struct.Addresses.html  struct.NetworkConfig.html  struct.NetworkDetail.html  struct.NetworkProviderArgs.html  type.JsonRpcClient.html  type.RpcProvider.html  type.RpcProviderWithoutSigner.html  type.SharedFillerChain.html
hopli/faucet/: index.html  sidebar-items.js  struct.FaucetArgs.html
hopli/identity/: enum.IdentityActionType.html  enum.IdentitySubcommands.html  index.html  sidebar-items.js  struct.ConvertPeerArgs.html  struct.IdentityArgs.html
hopli/identity_input/: index.html  sidebar-items.js  struct.LocalIdentityArgs.html  struct.LocalIdentityFromDirectoryArgs.html
hopli/identity_update/: index.html  sidebar-items.js  struct.IdentityUpdateArgs.html
hopli/initialize_node/: index.html  sidebar-items.js  struct.InitializeNodeArgs.html
hopli/key_pair/: fn.create_identity.html  fn.read_identities.html  fn.read_identity.html  fn.update_identity_password.html  index.html  sidebar-items.js  struct.IdentityFileArgs.html  struct.IdentityFromDirectoryArgs.html  struct.ManagerPrivateKeyArgs.html  struct.NewPasswordArgs.html  struct.PasswordArgs.html  struct.PrivateKeyArgs.html  trait.ArgEnvReader.html
hopli/methods/: enum.SafeTxOperation.html  fn.debug_node_safe_module_setup_main.html  fn.debug_node_safe_module_setup_on_balance_and_registries.html  fn.deploy_multicall3_for_testing.html  fn.deploy_proxy.html  fn.deploy_safe_module_with_targets_and_nodes.html  fn.deregister_nodes_from_network_registry.html  fn.deregister_nodes_from_node_safe_registry_and_remove_from_module.html  fn.force_sync_safes_on_network_registry.html  fn.get_chain_id_and_safe_nonce.html  fn.get_domain_separator.html  fn.get_native_and_token_balances.html  fn.get_registered_safes_for_nodes_on_network_registry.html  fn.get_registered_safes_for_nodes_on_node_safe_registry.html  fn.get_safe_transaction_hash.html  fn.get_salt_from_salt_nonce.html  fn.include_nodes_to_module.html  fn.migrate_nodes.html  fn.predict_module_address.html  fn.predict_safe_address.html  index.html  (+12 more)
hopr/: Cargo.toml
hopr-socks/: Cargo.toml
localcluster/: Cargo.toml  docker-compose.yml
tests/: barebone-lower-win-prob.cfg.yaml  barebone.cfg.yaml  config_nodes.py  conftest.py  contracts-addresses.json  default.cfg.yaml  find_port.py  hopr-smoke-test-node_5.cfg.yaml  hopr-smoke-test-node_barebone.cfg.yaml  hopr-smoke-test-node_default.cfg.yaml  hopr.old.py  hopr.py  hoprd_api.py  identities.ts  integration-test.sh  libp2p.spec.ts  localcluster.params.yml  node.py  node.ts  node_4.cfg.yaml  node_5.cfg.yaml  pyproject.toml  pytest.ini  requirements.txt  test_after_fixture_ready.sh  test_attack_session.py  test_hopli.py  test_integration.py  test_network_simulation.py  test_no_aggregate.py  test_no_proof_of_relay.py  test_payment_channel_close.py  test_redeeming.py  test_rest_api.py  test_security.py  test_session.py  test_stress.py  test_websocket_api.py  test_win_prob.py  test_zzz_sanity_checks.py  (+3 more)
utils/: Cargo.toml  Message.ts  README.md  api.js  api.ts  checkPeerId.ts  cliOptions.ts  db.js  db.ts  dependancies.ts  env.ts  index.ts  keywords.ts  message.ts  openChannels.ts  parseOptions.ts  settings.ts  store.ts
utils-session/: Cargo.toml  README.md
(+71149 files in other folders)
