[workspace]

resolver = "2"

members = [
  "chain/connector",
  "chain/types",
  "common/async-runtime",
  "common/internal-types",
  "common/network-types",
  "common/parallelize",
  "common/primitive-types",
  "common/statistics",
  "crypto/keypair",
  "crypto/packet",
  "crypto/random",
  "crypto/sphinx",
  "crypto/types",
  "hopr/api",
  "hopr/hopr-lib",
  "hoprd/hoprd",
  "hoprd/rest-api",
  "hoprd/rest-api-client",
  "logic/strategy",
  "misc/metrics",
  "misc/platform",
  "protocols/app",
  "protocols/hopr",
  "protocols/session",
  "protocols/start",
  "transport/api",
  "transport/identity",
  "transport/mixer",
  "transport/network",
  "transport/probe",
  "transport/protocol",
  "transport/session",
  "db/entity",
  "db/migration",
  "db/node",
  "utils/session",
  "localcluster",
  # implementations
  "hopr/reference",
  "impls/ct/immediate",
  "impls/ct/full-network",
  "impls/graph",
  "impls/transport/p2p",
]

[workspace.dependencies]
ahash = "0.8.12"
anyhow = "1.0.101"
aquamarine = "0.6.0"
arrayvec = { version = "0.7.6", features = ["serde"] }
assertables = "9.8.5"
async-broadcast = "0.7.2"
async-lock = "3.4.2"
async-signal = "0.2.13"
async-stream = "0.3.6"
async-trait = "0.1.89"
asynchronous-codec = { version = "0.7.0" }
atomic_enum = "0.3.0"
auto_impl = "1.3.0"
axum = { version = "0.8.8", features = ["http2"] }
backon = { version = "1.6.0", default-features = false }
base64 = "0.22.1"
bigdecimal = "0.4.10"
bimap = "0.6.3"
bitvec = "1.0.1"
blokli-client = { git = "https://github.com/hoprnet/blokli", version = "0.18.0" }
bloomfilter = { version = "3.0.1", features = ["serde"] }
bytesize = { version = "2.3.1", features = ["serde"] }
bytes = "1.11.1"
cfg-if = "1.0.4"
cfg_eval = "0.1.2"
chrono = { version = "0.4.43", default-features = false, features = [
  "std",
  "clock",
] }
clap = { version = "4.5.58", features = ["derive", "env", "string"] }
const_format = "0.2.35"
console-subscriber = "0.5.0"
criterion = { version = "0.8.2", features = ["async_tokio", "html_reports"] }
ctr = "0.9.2"
curve25519-dalek = { version = "4.1.3", features = ["rand_core"] }
dashmap = "6.1.0"
flagset = "0.4.7"
flume = "0.12.0"
float-cmp = "0.10.0"
futures = "0.3.31"
futures-core = "0.3.31"
futures-concurrency = "7.7.1"
futures-timer = "3.0.3"
futures-time = "3.0.1"
generic-array = "1.3.5"
halfbrown = "0.4.0"
hashbrown = "0.16.1"
hex = "0.4.3"
hex-literal = "1.1.0"
hickory-resolver = "0.25.2"
http = "1.1.0"
human-bandwidth = { version = "0.1.4", features = ["serde"] }
humansize = "2.1.3"
humantime-serde = "1.1.1"
insta = { version = "1.46.3", features = ["json", "yaml"] }
indexmap = { version = "2.13.0", features = ["serde", "rayon"] }
k256 = { version = "0.13.4", features = [
  "arithmetic",
  "ecdh",
  "hash2curve",
  "serde",
] }
lazy_static = "1.5.0"
libp2p = { version = "0.56.0" }
libp2p-identity = { version = "0.2.13", features = [
  "peerid",
  "ed25519",
  "rand",
] }
libp2p-stream = { version = "0.4.0-alpha" }
mockall = "0.14.0"
moka = { version = "0.12.13", features = ["future"] }
more-asserts = "0.3.1"
multiaddr = "0.18.2"
num_enum = "0.7.5"
oas3 = "0.20.1"
openapiv3 = "2.2.0"
opentelemetry = { version = "0.31.0" }
opentelemetry-otlp = { version = "0.31.0", default-features = false }
opentelemetry_sdk = { version = "0.31.0" }
tracing-opentelemetry = { version = "0.32.1" }
temp-env = "0.3.6"
parameterized = "2.0.0" # ignored in renovate, kept back to 2.0.0 due to conflict with indexmap
parking_lot = "0.12.5"
pcap-file = "2.0.0"
petgraph = { version = "0.8.3", features = ["serde-1"] }
pid = "4.0.0"
pin-project = "1.1.10"
percent-encoding = "2.3.1"
prettyplease = "0.2.22"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
primitive-types = { version = "0.14.0", features = ["serde"] }
proc-macro-regex = "~1.1.0"
prometheus = "0.14.0"
progenitor = "0.12.0"
progenitor-client = "0.12.0"
rand = { version = "0.10.0", features = ["thread_rng"] }
rand_distr = "0.6.0"
rayon = "1.11.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "stream",
] }
ringbuffer = "0.16.0"
rust-stream-ext-concurrent = "2.0.0"
rstest = { version = "0.26.1" }
scrypt = { version = "0.11.0", default-features = false }
sea-orm = { version = "1.1.19", default-features = false, features = [
  "sqlx-sqlite",
  "with-chrono",
  "with-json",
  "debug-print",
] }
sea-orm-cli = { version = "1.1.19", default-features = false, features = [
  "codegen",
] }
sea-orm-migration = { version = "1.1.19", default-features = false, features = [
  "cli",
  "sqlx-sqlite",
  "with-chrono",
] }
sea-query = { version = "0.32.7", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_cbor_2 = "0.13.0"
serde_json = "1.0.149"
serde_repr = "0.1.20"
serde_with = { version = "3.16.1", features = ["base64"] }
serde_urlencoded = "0.7.1"
serde-saphyr = "0.0.19"
serial_test = "3.3.1"
sha3 = "0.10.8"
signal-hook = "0.4.3"
smart-default = "0.7.1"
socket2 = "0.6.2"
sqlx = { version = "0.8.6", default-features = false, features = [
  "sqlite",
  "macros",
  "migrate",
] }
strum = { version = "0.27.2", features = ["derive"] }
subtle = "2.6.1"
syn = { version = "2.0.116", features = ["full"] }
tempfile = "3.24.0"
test-log = { version = "0.2.19", features = ["trace"] }
thiserror = "2.0.18"
tikv-jemallocator = "0.6.1"
tikv-jemalloc-ctl = { version = "0.6.1", features = ["stats"] }
tokio = { version = "1.49.0", features = [
  "rt-multi-thread",
  "macros",
  "tracing",
] }
tokio-util = { version = "0.7.18", default-features = false, features = [
  "codec",
  "compat",
] }
tokio-retry = "0.3.0"
tokio-stream = { version = "0.1.18", features = ["net"] }
tower-http = { version = "0.6.8", features = [
  "validate-request",
  "compression-full",
  "cors",
  "trace",
  "sensitive-headers",
] }
tower = { version = "0.5.3", default-features = false, features = ["util"] }
utoipa = { version = "5.4.0" }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = [
  "axum",
  "vendored",
  "debug-embed",
] }
tracing = { version = "0.1.44", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "fmt",
  "registry",
  "std",
] }
typenum = "1.19.0"
uuid = { version = "1.20.0" }
validator = { version = "0.20.0", features = ["derive"] }
vergen-gix = { version = "9.1.0", features = ["build"] }
mimalloc = { version = "0.1.48", default-features = false, features = [
  "secure",
] }

hopr-api = { path = "hopr/api" }
hopr-async-runtime = { path = "common/async-runtime" }
hopr-bindings = { git = "https://github.com/hoprnet/contracts", branch = "main", version = "4.7.0" }
hopr-chain-types = { path = "chain/types" }
hopr-crypto-keypair = { path = "crypto/keypair", default-features = false }
hopr-crypto-packet = { path = "crypto/packet", default-features = false }
hopr-crypto-random = { path = "crypto/random", default-features = false }
hopr-crypto-sphinx = { path = "crypto/sphinx", default-features = false, features = [
  "x25519",
  "ed25519",
] }
hopr-crypto-types = { path = "crypto/types", default-features = false }
hopr-internal-types = { path = "common/internal-types", default-features = false }
hopr-lib = { path = "hopr/hopr-lib", default-features = false }
hopr-metrics = { path = "misc/metrics", default-features = false }
hopr-network-types = { path = "common/network-types", default-features = false }
hopr-parallelize = { path = "common/parallelize" }
hopr-platform = { path = "misc/platform" }
hopr-primitive-types = { path = "common/primitive-types", default-features = false }
hopr-protocol-app = { path = "protocols/app" }
hopr-protocol-hopr = { path = "protocols/hopr" }
hopr-protocol-session = { path = "protocols/session" }
hopr-protocol-start = { path = "protocols/start" }
hopr-strategy = { path = "logic/strategy", default-features = false }
hopr-transport = { path = "transport/api" }
hopr-transport-identity = { path = "transport/identity" }
hopr-transport-network = { path = "transport/network" }
hopr-transport-mixer = { path = "transport/mixer" }
hopr-transport-probe = { path = "transport/probe" }
hopr-transport-protocol = { path = "transport/protocol" }
hopr-transport-session = { path = "transport/session" }
hoprd = { path = "hoprd/hoprd" }
hoprd-api = { path = "hoprd/rest-api", default-features = false }
hoprd-api-client = { path = "hoprd/rest-api-client" }
hopr-db-entity = { path = "db/entity" }
hopr-db-migration = { path = "db/migration" }
hopr-utils-session = { path = "utils/session" }
hopr-db-node = { path = "db/node" }
hopr-chain-connector = { path = "chain/connector" }
hopr-statistics = { path = "common/statistics" }

# referential implementations
hopr-reference = { path = "hopr/reference" }
hopr-transport-p2p = { path = "impls/transport/p2p" }
hopr-ct-immediate = { path = "impls/ct/immediate" }
hopr-ct-full-network = { path = "impls/ct/full-network" }
hopr-network-graph = { path = "impls/graph" }

[profile.dev]
panic = "abort"

# this profile focuses on the speed of compilation
[profile.candidate]
inherits = "release"
codegen-units = 16   # normal release default
lto = false          # do the smallest amount of link-time optimization
panic = "abort"
strip = true
opt-level = 2

# perform minimal optimizations to prevent stack overflows in large tests
[profile.test]
opt-level = 1

# this profile focuses on the best runtime performance and the smallest binary size
[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
opt-level = 3

# uses extended debug symbols for profiling but does not harm benchmarking performance
[profile.bench]
debug = 2
split-debuginfo = "off"
strip = false

# make insta snapshots faster
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[workspace.metadata.cargo-shear]
ignored = ["oas3", "serde_bytes", "humantime-serde"]
