[workspace]

resolver = "2"

members = [
  "utils",
  "crypto/packet",
  "hopr/hopr-lib",
  "impls/ticket-manager",
  "protocols/app",
  "protocols/hopr",
  "protocols/session",
  "protocols/start",
  "transport/hopr",
  "transport/mixer",
  "transport/probe",
  "transport/session",
  "transport/tag-allocator",
  "utils-session",
  # implementations
  "impls/connector",
  "impls/session-server-forwarder",
  "impls/ct/immediate",
  "impls/ct/full-network",
  "impls/graph",
  "impls/strategy",
  "impls/transport/p2p",
]

[workspace.package]
rust-version = "1.91"
edition = "2024"
authors = ["HOPR Association <tech@hoprnet.org>"]
license = "GPL-3.0-only"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"

[workspace.metadata.publish]
order = [
  "hopr-utils",
  "hopr-crypto-packet",
  "hopr-protocol-app",
  "hopr-protocol-start",
  "hopr-transport-tag-allocator",
  "hopr-transport-mixer",
  "hopr-ticket-manager",
  "hopr-protocol-hopr",
  "hopr-protocol-session",
  "hopr-transport-probe",
  "hopr-transport-session",
  "hopr-network-graph",
  "hopr-ct-full-network",
  "hopr-chain-connector",
  "hopr-transport-p2p",
  "hopr-strategy",
  "hopr-session-server-forwarder",
  "hopr-transport",
  "hopr-lib",
  "hopr-utils-session",
]

[workspace.dependencies]
anyhow = "1.0.103"
arrayvec = "0.7.8"
async-broadcast = "0.7.2"
async-trait = "0.1.89"
backon = { version = "1.6.0", default-features = false }
bytesize = { version = "2.4.0", features = ["serde"] }
cfg_eval = "0.1.2"
const_format = "0.2.36"
futures = { version = "0.3.32", default-features = false, features = [
  "std",
  "async-await",
] }
futures-concurrency = "7.7.1"
futures-time = "3.1.0"
hex-literal = "1.1.0"
humantime-serde = "1.1.1"
insta = { version = "1.48.0", features = ["yaml", "redactions"] }
lazy_static = "1.5.0"
oas3 = "0.22.0"
opentelemetry-prometheus-text-exporter = { version = "0.3" }
opentelemetry_sdk = { version = "0.32" }
parking_lot = "0.12.5"
rand = { version = "0.10.1", features = ["thread_rng"] }
rstest = { version = "0.26.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde-saphyr = "0.0.28"
serde_with = { version = "3.21.0", features = ["base64"] }
serial_test = "3.5.0"
smart-default = "0.7.1"
strum = { version = "0.28.0", features = ["derive"] }
test-log = { version = "0.2.21", features = ["trace"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
  "rt-multi-thread",
  "macros",
  "tracing",
] }
tokio-util = { version = "0.7.18", default-features = false, features = [
  "codec",
  "compat",
] }
tracing = { version = "0.1.44", features = ["release_max_level_debug"] }
validator = { version = "0.20.0", features = ["derive"] }

hopr-api = "1.15.0"
hopr-utils = { version = "0.3.1", path = "utils", default-features = false }
hopr-utils-session = { version = "1.2.1", path = "utils-session" }
hopr-strategy = { version = "0.19.2", path = "impls/strategy" }
hopr-ticket-manager = { version = "0.5.0", path = "impls/ticket-manager" }
hopr-transport = { version = "0.32.0", path = "transport/hopr", default-features = false }
hopr-chain-connector = { version = "0.22.0", path = "impls/connector" }

# referential implementations
hopr-session-server-forwarder = { version = "0.1.0", path = "impls/session-server-forwarder", default-features = false }
hopr-transport-p2p = { version = "0.9.4", path = "impls/transport/p2p", default-features = false }
hopr-ct-full-network = { version = "0.3.0", path = "impls/ct/full-network", default-features = false }
hopr-network-graph = { version = "0.3.0", path = "impls/graph", default-features = false }

[profile.dev]
panic = "abort"

# this profile focuses on the speed of compilation
[profile.candidate]
inherits = "release"
codegen-units = 16   # normal release default
lto = false          # do the smallest amount of link-time optimization
panic = "abort"
strip = true
opt-level = 2

# perform minimal optimizations to prevent stack overflows in large tests
[profile.test]
opt-level = 1

# this profile focuses on the best runtime performance and the smallest binary size
[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = 3
strip = true

# memory profiling profile — inherits release optimizations but preserves debug symbols
# for jeprof symbol resolution
[profile.memprof]
inherits = "release"
debug = 2
strip = false

# uses extended debug symbols for profiling but does not harm benchmarking performance
[profile.bench]
debug = 2
split-debuginfo = "off"
strip = false

# CPU profiling profile — release performance with full DWARF symbols.
# Use with `cargo flamegraph --profile profiling` (Linux) or the pprof
# in-process feature (`--features profiling`).  Mirrors [profile.memprof]
# which is used for allocation profiling.
[profile.profiling]
inherits = "release"
debug = 2
strip = false

# make insta snapshots faster
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[workspace.metadata.cargo-shear]
ignored = [
  "oas3",
  "serde_bytes",
  "humantime-serde",
  "hopr-session-server-forwarder",
  "hopr-strategy",
  "hopr-utils-session",
]
