[project]
name = "hoprnet"
version = "0.1.0"
description = "not needed"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "base58==2.1.1",
    "cryptography==43.0.1",
    "pynacl==1.5.0",
    "pytest-asyncio==0.24.0",
    "pytest-timeout==2.3.1",
    "pytest==8.3.3",
    "requests==2.28.2",
    "rlp==3.0.0",
    "waiting==1.4.1",
    "websocket-client==1.5.1",
    "websockets==13.1",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "vendor",
  "ethereum/contracts/lib",
]
