[project]
name = "hoprnet"
version = "3.0.0"
description = "HOPR network"
readme = "README.md"
requires-python = ">=3.14.2,<3.15"
dependencies = ["sdk-localcluster", "sdk-api"]

[tool.uv]
# exclude-newer = "2025-07-18T00:00:00Z"

[tool.uv.sources]
sdk-localcluster = { workspace = true }
sdk-api = { workspace = true }
tests = { workspace = true }

[tool.uv.workspace]
members = ["sdk/python/localcluster", "sdk/python/api", "tests"]

[dependency-groups]
dev = ["ruff>=0.14.11", "tests"]
lint = ["black==25.12.0"]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F"]
lint.ignore = []
