[package]
name = "hopli"
version = "0.10.0"
edition = "2021"
license = "GPL-3.0-only"

[features]
default = []
allocator-mimalloc = [
  "dep:mimalloc",
] # Use mimalloc as the global allocator on Linux
allocator-jemalloc = [
  "dep:tikv-jemallocator",
] # Use jemalloc as the global allocator on Linux

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
hex-literal = { workspace = true }
rpassword = { workspace = true }
url = { workspace = true }

hopr-bindings = { workspace = true }
hopr-chain-types = { workspace = true }
hopr-crypto-keypair = { workspace = true, features = ["to-file"] }
hopr-crypto-types = { workspace = true }
hopr-internal-types = { workspace = true }
hopr-primitive-types = { workspace = true }


[dev-dependencies]
anyhow = { workspace = true }
tempfile = { workspace = true }
env_logger = { workspace = true }

hopr-crypto-random = { workspace = true }

# Target-specific dependencies for memory allocators
[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }
