[package]
name = "hopr-socks"
version = "0.1.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
description = ""
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1"
clap = { workspace = true }
fast-socks5 = "0.9.6"
tokio = { workspace = true, features = [
    "io-util",
    "net",
    "time",
    "rt-multi-thread",
    "macros",
] }
tracing = { workspace = true}
tracing-subscriber = { workspace = true }