[package]
name = "hopr-lib"
version = "2.1.0-rc.1"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
description = "HOPR library containing the entire functionality importable without the HOPRd daemon"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[dependencies]
async-lock = { workspace = true }
async-std = { workspace = true }
const_format = "0.2.32"
futures = { workspace = true }
lazy_static = { workspace = true }
semver = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = "1.0"
validator = { workspace = true }

core-path = { workspace = true }
core-transport = { workspace = true }
core-strategy = { workspace = true }        # TODO: better organize and cleanup, due to StrategyConfig
chain-actions = { workspace = true }
chain-api = { workspace = true }
chain-rpc = { workspace = true }
chain-db = { workspace = true }
chain-types = { workspace = true }
chain-indexer = { workspace = true }
platform = { workspace = true }
utils-db = { workspace = true }
log = { workspace = true }
metrics = { workspace = true, optional = true }
hopr-internal-types = { workspace = true }
hopr-primitive-types = { workspace = true }

[dev-dependencies]
serde_yaml = { version = "0.9" }

[features]
default = ["prometheus"]
wasm = [
    "core-path/wasm",
    "core-transport/wasm",
    "core-strategy/wasm",
    "chain-actions/wasm",
    "chain-api/wasm",
    "chain-db/wasm",
    "chain-indexer/wasm",
    "chain-rpc/wasm",
    "platform/js",
    "utils-db/js",
    "metrics?/js",
]
prometheus = ["dep:metrics", "core-transport/prometheus", "chain-api/prometheus", "chain-indexer/prometheus", "chain-rpc/prometheus",  ]
