[package]
name = "hoprd-localcluster"
version = "0.1.4"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition.workspace = true
rust-version.workspace = true
license = "GPL-3.0-only"

description = "Local HOPR cluster runner using external hoprd processes"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
hoprd = { workspace = true, features = [
  "runtime-tokio",
  "telemetry",
  "transport-quic",
] }
hopr-chain-connector = { workspace = true }
hopr-types = { workspace = true, features = ["primitive"] }
hopr-lib = { workspace = true }
hopr-builder = { workspace = true, features = ["runtime-tokio"] }
hoprd-api-client = { workspace = true }
hoprd-api = { workspace = true }
lazy_static = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde-saphyr = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "time",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
