[project]
name = "tests"
version = "1.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "pytest>=8.3.3",
  "pytest-asyncio>=1.1.0",
  "pytest-timeout>=2.3.1",
  "websocket-client>=1.5.1",
  "websockets>=15.0.1",
  "requests>=2.32.3",
]

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = ["-ra", "-q"]

log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

log_level = "DEBUG"
log_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_date_format = "%Y-%m-%d %H:%M:%S"
