[package]
name = "hopr-utils-session"
description = "Utility functionality for managing HOPR sessions through the hopr-lib interface"
version = "1.2.1"
edition.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["hopr", "session", "utilities"]
repository.workspace = true
homepage.workspace = true
categories = ["network-programming", "asynchronous"]
authors.workspace = true
rust-version.workspace = true
include = [
  "README.md",
  "src/**/*.rs",
  "Cargo.toml",
  "LICENSE",
]

[lib]
crate-type = ["rlib"]

[features]
default = ["runtime-tokio"]
runtime-tokio = [
  "hopr-utils/runtime-tokio",
  "hopr-lib/runtime-tokio",
  "hopr-utils/network-types-runtime-tokio",
  "hopr-transport/runtime-tokio",
]
explicit-path = ["hopr-lib/explicit-path"]
telemetry = [
  "hopr-api/types-telemetry",
  "hopr-transport/telemetry",
  "hopr-utils/network-types-telemetry",
]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytesize = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-time = { workspace = true }
human-bandwidth = { workspace = true }
lazy_static = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

hopr-api = { workspace = true }
hopr-lib = { workspace = true, features = ["session-client"] }
hopr-utils = { workspace = true, features = ["network-types"] }
hopr-transport = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
test-log = { workspace = true }

hopr-transport = { workspace = true, features = ["telemetry"] }
